[gd_scene load_steps=51 format=3 uid="uid://dbhw3n1mvdf3q"]

[ext_resource type="Texture2D" uid="uid://c6hc5lhbins1k" path="res://src/PLayer/Vampire_Girl/Attack_1.png" id="1_ogeth"]
[ext_resource type="Script" path="res://src/PLayer/player.gd" id="1_sddph"]
[ext_resource type="Texture2D" uid="uid://cpymvggtc1m5f" path="res://src/PLayer/Vampire_Girl/Attack_2.png" id="2_pdkdf"]
[ext_resource type="Texture2D" uid="uid://28tq3ng3mlvb" path="res://src/PLayer/Vampire_Girl/Attack_4.png" id="3_3bug4"]
[ext_resource type="Texture2D" uid="uid://dbdy4r6mb8pm2" path="res://src/PLayer/Vampire_Girl/Dead.png" id="3_tl4n3"]
[ext_resource type="Texture2D" uid="uid://cyg8u8ae1vcgp" path="res://src/PLayer/Vampire_Girl/Hurt.png" id="4_kyvv0"]
[ext_resource type="Texture2D" uid="uid://brlrte6ifjpnb" path="res://src/PLayer/Vampire_Girl/Idle.png" id="5_hfnll"]
[ext_resource type="Texture2D" uid="uid://d25yvyd5oq8h8" path="res://src/PLayer/Vampire_Girl/Walk.png" id="6_fa1i2"]
[ext_resource type="Script" path="res://src/Utility_scripts/Player_stats/PlayerStats.gd" id="9_8sxit"]
[ext_resource type="Script" path="res://src/Utility_scripts/HurtBox/hurt_box.gd" id="10_52sc8"]
[ext_resource type="Script" path="res://src/Utility_scripts/HitBox/hit_box.gd" id="11_pgy40"]

[sub_resource type="AtlasTexture" id="AtlasTexture_06fn1"]
atlas = ExtResource("1_ogeth")
region = Rect2(0, 0, 125, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ytx7b"]
atlas = ExtResource("1_ogeth")
region = Rect2(125, 0, 125, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_yinp5"]
atlas = ExtResource("1_ogeth")
region = Rect2(250, 0, 125, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_cxb1a"]
atlas = ExtResource("1_ogeth")
region = Rect2(375, 0, 125, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_i06nd"]
atlas = ExtResource("1_ogeth")
region = Rect2(500, 0, 125, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_nu43c"]
atlas = ExtResource("2_pdkdf")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_0nxtq"]
atlas = ExtResource("2_pdkdf")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_dqkng"]
atlas = ExtResource("2_pdkdf")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_w2tym"]
atlas = ExtResource("2_pdkdf")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_u5o0r"]
atlas = ExtResource("3_3bug4")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_k7mxc"]
atlas = ExtResource("3_3bug4")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_1eg6d"]
atlas = ExtResource("3_3bug4")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_kmv5k"]
atlas = ExtResource("3_3bug4")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ggf6"]
atlas = ExtResource("3_3bug4")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_iowoq"]
atlas = ExtResource("3_tl4n3")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_gdwfd"]
atlas = ExtResource("3_tl4n3")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_4cylv"]
atlas = ExtResource("3_tl4n3")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_yh0lv"]
atlas = ExtResource("3_tl4n3")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_r3hkv"]
atlas = ExtResource("3_tl4n3")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_bkrsl"]
atlas = ExtResource("3_tl4n3")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_3gabx"]
atlas = ExtResource("3_tl4n3")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_aaptc"]
atlas = ExtResource("3_tl4n3")
region = Rect2(896, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_nj8in"]
atlas = ExtResource("3_tl4n3")
region = Rect2(1024, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_1elwu"]
atlas = ExtResource("3_tl4n3")
region = Rect2(1152, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_23wfg"]
atlas = ExtResource("4_kyvv0")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_iyisx"]
atlas = ExtResource("4_kyvv0")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_vk2c8"]
atlas = ExtResource("5_hfnll")
region = Rect2(0, 0, 125, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_g7pt3"]
atlas = ExtResource("5_hfnll")
region = Rect2(125, 0, 125, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_rf8cv"]
atlas = ExtResource("5_hfnll")
region = Rect2(500, 0, 125, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_gr8ns"]
atlas = ExtResource("5_hfnll")
region = Rect2(375, 0, 125, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ncrbg"]
atlas = ExtResource("5_hfnll")
region = Rect2(250, 0, 125, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_jtn88"]
atlas = ExtResource("6_fa1i2")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_sb4xk"]
atlas = ExtResource("6_fa1i2")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ci21y"]
atlas = ExtResource("6_fa1i2")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_felnj"]
atlas = ExtResource("6_fa1i2")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_invkn"]
atlas = ExtResource("6_fa1i2")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_2hvfl"]
atlas = ExtResource("6_fa1i2")
region = Rect2(640, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_dl7bm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_06fn1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ytx7b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yinp5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cxb1a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i06nd")
}],
"loop": false,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nu43c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0nxtq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dqkng")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w2tym")
}],
"loop": true,
"name": &"attack2",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u5o0r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k7mxc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1eg6d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kmv5k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ggf6")
}],
"loop": true,
"name": &"attack3",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iowoq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gdwfd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4cylv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yh0lv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r3hkv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bkrsl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3gabx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aaptc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nj8in")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1elwu")
}],
"loop": false,
"name": &"die",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_23wfg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iyisx")
}],
"loop": true,
"name": &"hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vk2c8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g7pt3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rf8cv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gr8ns")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ncrbg")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jtn88")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sb4xk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ci21y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_felnj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_invkn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2hvfl")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_aw7g1"]
radius = 21.0
height = 70.0

[node name="Player" type="CharacterBody2D" groups=["Player"]]
script = ExtResource("1_sddph")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(87, 85)
scale = Vector2(1.35938, 1.35938)
sprite_frames = SubResource("SpriteFrames_dl7bm")
animation = &"attack"
frame = 4
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=["Player"]]
visible = false
position = Vector2(83, 124)
shape = SubResource("CapsuleShape2D_aw7g1")
debug_color = Color(0.743545, 0.416871, 0.546863, 0.42)

[node name="Camera2D" type="Camera2D" parent="." groups=["Player"]]

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.497

[node name="stats" type="Node2D" parent="."]
script = ExtResource("9_8sxit")

[node name="HurtBox" type="Area2D" parent="." groups=["Player", "attack"]]
position = Vector2(-7.62939e-06, 0)
script = ExtResource("10_52sc8")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="HurtBox"]
position = Vector2(-61, 15)
scale = Vector2(0.802761, 0.854721)
polygon = PackedVector2Array(69, 172, 93, 171, 93, 169, 76, 169, 76, 168, 93, 168, 93, 162, 76, 164, 76, 161, 78, 161, 77, 159, 79, 159, 79, 158, 80, 158, 80, 157, 81, 157, 81, 155, 82, 155, 83, 154, 84, 154, 84, 153, 85, 153, 86, 150, 87, 150, 87, 147, 89, 146, 89, 150, 90, 150, 90, 155, 91, 155, 91, 162, 93, 162, 93, 171, 104, 172, 105, 171, 103, 170, 103, 169, 101, 169, 101, 168, 99, 168, 99, 166, 98, 166, 98, 146, 96, 146, 96, 137, 95, 136, 95, 133, 94, 132, 94, 116, 92, 116, 92, 112, 94, 112, 93, 108, 92, 107, 91, 105, 89, 104, 88, 103, 87, 102, 84, 101, 84, 100, 88, 100, 89, 98, 90, 98, 90, 97, 91, 95, 92, 94, 93, 95, 94, 96, 94, 97, 97, 97, 98, 97, 98, 96, 96, 96, 96, 94, 95, 93, 95, 91, 95, 90, 94, 89, 94, 86, 93, 85, 93, 83, 92, 82, 91, 82, 90, 81, 90, 80, 90, 79, 90, 78, 88, 78, 88, 77, 86, 77, 85, 76, 77, 76, 77, 77, 75, 77, 75, 78, 72, 78, 72, 80, 71, 80, 71, 81, 70, 81, 69, 81, 69, 83, 68, 84, 67, 83, 65, 82, 64, 81, 63, 81, 62, 80, 61, 81, 60, 83, 60, 84, 61, 84, 62, 86, 63, 88, 61, 89, 60, 90, 59, 92, 58, 93, 59, 94, 60, 93, 61, 92, 63, 92, 64, 92, 64, 93, 62, 94, 62, 96, 62, 98, 63, 99, 64, 100, 65, 101, 65, 102, 67, 102, 69, 102, 70, 101, 71, 102, 72, 102, 73, 102, 74, 101, 75, 102, 76, 103, 75, 105, 74, 105, 74, 107, 74, 116, 73, 116, 73, 121, 73, 125, 73, 127, 74, 128, 74, 130, 75, 132, 75, 135, 76, 138, 76, 140, 78, 141, 78, 146, 78, 149, 77, 150, 75, 152, 74, 153, 72, 155, 70, 159, 69, 163, 67, 167, 67, 170)

[node name="HitBox" type="Area2D" parent="." groups=["Player", "attack"]]
unique_name_in_owner = true
position = Vector2(-57, 30)
script = ExtResource("11_pgy40")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="HitBox"]
position = Vector2(-162, -2)
polygon = PackedVector2Array(174, 94, 176, 97, 178, 100, 182, 102, 185, 102, 189, 104, 195, 106, 196, 106, 194, 108, 194, 111, 196, 112, 197, 112, 200, 109, 201, 108, 204, 106, 204, 105, 201, 100, 194, 100, 191, 99, 186, 97, 183, 93, 178, 89)
